[package]
name = "miband-heart-rate"
authors = ["Tnze"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Tnze/miband-heart-rate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
bluest = "0.6.8"
futures-lite = "2.6.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# This project also includes a Python implementation in miband_heart_rate.py
# The Python version provides the same functionality with easier setup